CU-07 implementado
- Se implemento el caso de uso para buscar un socio
- Se implemento el controlador para buscar un socio
- Se implemento la ruta, el endpoint para acceder al metodo GET
  y consultar los datos
- Se documento el metodo GET en swagger
